client/packages/teampilot_search/lib/teampilot_search_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> tp_search_version();

@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<TpSearchConfig>,
    ffi.Pointer<ffi.Pointer<TpSearchHandle>>,
  )
>()
external int tp_search_new(
  ffi.Pointer<TpSearchConfig> config,
  ffi.Pointer<ffi.Pointer<TpSearchHandle>> out,
);

@ffi.Native<
  ffi.Int32 Function(ffi.Pointer<TpSearchHandle>, ffi.Pointer<TpSearchChunk>)
>()
external int tp_search_next(
  ffi.Pointer<TpSearchHandle> handle,
  ffi.Pointer<TpSearchChunk> chunk,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<TpSearchHandle>)>()
external void tp_search_cancel(ffi.Pointer<TpSearchHandle> handle);

@ffi.Native<ffi.Void Function(ffi.Pointer<TpSearchHandle>)>()
external void tp_search_free(ffi.Pointer<TpSearchHandle> handle);

final class TpSearchHandle extends ffi.Opaque {}

final class TpSearchConfig extends ffi.Struct {
  external ffi.Pointer<ffi.Char> root;

  external ffi.Pointer<ffi.Char> pattern;

  @ffi.Int32()
  external int is_regex;

  @ffi.Int32()
  external int case_sensitive;

  @ffi.Int32()
  external int smart_case;

  @ffi.Int32()
  external int use_gitignore;

  external ffi.Pointer<ffi.Pointer<ffi.Char>> files_to_include;

  @ffi.Uint32()
  external int files_to_include_count;

  external ffi.Pointer<ffi.Pointer<ffi.Char>> files_to_exclude;

  @ffi.Uint32()
  external int files_to_exclude_count;

  @ffi.Uint64()
  external int max_file_size;

  @ffi.Uint64()
  external int max_results;

  @ffi.Uint32()
  external int max_chunk_matches;

  @ffi.Uint32()
  external int max_chunk_bytes;
}

final class TpSearchMatch extends ffi.Struct {
  external ffi.Pointer<ffi.Char> path;

  external ffi.Pointer<ffi.Char> relative_path;

  @ffi.Uint64()
  external int line_number;

  external ffi.Pointer<ffi.Char> line_text;

  @ffi.Uint32()
  external int match_start;

  @ffi.Uint32()
  external int match_end;
}

final class TpSearchChunk extends ffi.Struct {
  external ffi.Pointer<ffi.Char> string_buf;

  @ffi.Uint32()
  external int string_buf_cap;

  @ffi.Uint32()
  external int string_buf_len;

  external ffi.Pointer<TpSearchMatch> matches;

  @ffi.Uint32()
  external int matches_cap;

  @ffi.Uint32()
  external int matches_len;

  @ffi.Int32()
  external int truncated;
}
